@@ -1,3 +1,9 @@
+2004-01-10  Matthias Wimmer  <m@tthias.net>
+
+    * connect.c: Flag the root element as sent (for stream error handling)
+    * jadc2s.c: send stream error for authentication timeouts
+    * jadc2s.h: same
+
 2004-01-03  Matthias Wimmer  <m@tthias.net>
 
     * jadc2s.h: added two more stream errors
